# quiver

./: .gitignore  .nojekyll  NOTICE  README.md  analysis.json  collections.json  manifest.json  pyproject.toml
.github/workflows/: pages.yml
assets/: index-BOuuYVBO.js
collections/top4-complex-analysis-wide-v1/: graph.json
collections/top4-geometric-analysis-narrow-v1/: analysis.json  manifest.json
docs/: PROJECT_TREE.md
docs/visualization/: BUILD_AND_DEPLOY.md  DATA_CONTRACT.md  INTERACTION_MODEL.md  README.md
examples/pages/: index.html
examples/site/: analysis.json  collections.json  graph.json  manifest.json
geometric-analysis-narrow-v1/: analysis.json  collections.json  manifest.json
geometric-analysis-narrow-v1/assets/: index-Cza0cxxv.css
improvements/: INDEX.json  README.md  qi
improvements/archive/: INDEX.json
improvements/items/: QI-0001.json  QI-0002.json  QI-0003.json  QI-0004.json  QI-0005.json  QI-0006.json  QI-0007.json  QI-0008.json  QI-0009.json  QI-0010.json  QI-0011.json  QI-0012.json  QI-0013.json  QI-0014.json  QI-0015.json  QI-0016.json  QI-0017.json  QI-0018.json  QI-0019.json
improvements/schema/: quiver-improvement.schema.json
improvements/tools/: qi.py
schemas/: concept-graph.schema.json  graph-delta.schema.json
src/quiver/: __init__.py  audit.py  cli.py  codex.py  concept_quality.py  ingest.py  merge.py  monitor.py  search.py  (+8 more)
tests/: test_cli.py  test_concept_quality.py  test_improvements.py  test_pipeline.py  test_project.py  test_schemas.py
web/: index.html  package-lock.json  package.json  playwright.config.ts
(+61 files in other folders)
