[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quiver"
version = "0.0.1"
description = "Paper-to-concept dependency graph harness with Codex-ready extraction."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AI4Math" },
]
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
quiver = "quiver.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quiver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
